Add changes to hw13 responsive

--- a/cv.html
+++ b/cv.html
@@ -108,10 +108,14 @@ href="https://liubovkoliada.github.io/lessons/homework_14/index.html"
 Homework_14</a
 >
 <br />
-<a
-href=""
+<a href="https://liubovkoliada.github.io/lessons/homework_15/index.html"
 >
 Homework_15</a
+>
+<br />
+<a href=""
+>
+Homework_16 Responsive</a
 >
 <br />
 
