--- a/homework_13/index.html
+++ b/homework_13/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -28,6 +28,7 @@
             <h2 class="heading-title"> Наши номера</h2>
           </div>
           <div class="heading-right">
+            <div class="button__filters"><img class="image__filters" src="images/Vector.svg" alt="img"> Фильтры</div>
             <div class="dropdown">
               <div class="drodown__value ">
               <img class="arrow up" src="images/vector.png" alt="img"/> По площади <img class="angle" src="images/Vector1.png" alt="img"/>
