Add changes to cv

--- a/cv.html
+++ b/cv.html
@@ -113,7 +113,7 @@ Homework_14</a
 Homework_15</a
 >
 <br />
-<a href=""
+<a href="https://liubovkoliada.github.io/lessons/homework_13/index.html"
 >
 Homework_16 Responsive</a
 >
