--- a/cv.html
+++ b/cv.html
@@ -118,6 +118,11 @@ Homework_15</a
 Homework_16 Responsive</a
 >
 <br />
+<a href="https://liubovkoliada.github.io/lessons/homework_13/index.html"
+>
+Homework_17 </a
+>
+<br />
 
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
